Add 'listing' package for listing directory structure of project

--- a/doc/mte7101.tex
+++ b/doc/mte7101.tex
@@ -88,6 +88,12 @@
 \definecolor{syntaxBlue}{rgb}{0,0,0.5}
 \definecolor{syntaxComment}{rgb}{0,0.5,0}
 %---------------------------------------------------------------------------
+% Load listing package
+% which produces formatted program listings
+%---------------------------------------------------------------------------
+\usepackage{listing}
+\renewcommand{\listingname}{Auflistung}
+%---------------------------------------------------------------------------
 
 % Load listings package
 % which provides source code formatting
